--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -1,6 +1,6 @@
 # IT开发网站
 
-## [【Git】官网](https://git-scm.com)
+## 【[Git](https://git-scm.com)】官网
 
 ```markdown
 # 作用介绍
@@ -359,7 +359,7 @@ git config --global --add safe.directory "*"
 git config --global --unset safe.directory
 ```
 
-## [【GitHub】官网](https://github.com)
+## 【[GitHub](https://github.com)】官网
 
 ### # 资源网址
 
@@ -438,7 +438,7 @@ eclipse.ini文件，在文件的最后添加指令：
 -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
 ```
 
-## [【Gitee】官网](https://gitee.com)
+## 【[Gitee](https://gitee.com)】官网
 
 ### # 账号密码
 
@@ -491,7 +491,7 @@ Gitee 与本地的 Git 分支为 master
 
 ![image-20241204001128532](..\imgs\01\Website\Git\Gitee\image-20241204001128532.png)
 
-## [【Gitea】官网](https://gitea.com)
+## 【[Gitea](https://gitea.com)】官网
 
 ### # 账号密码
 
@@ -517,7 +517,7 @@ Gitee 与本地的 Git 分支为 master
 点击 [应用授权]
 ```
 
-## [【GitCode】官网](https://gitcode.com)
+## 【[GitCode](https://gitcode.com)】官网
 
 ### # 访问令牌
 
@@ -546,7 +546,7 @@ git remote set-url origin https://qq_41519754:fxW14yxZaqWmRTdrLWy_8Jfb@gitcode.c
 git config --global credential.helper store
 ```
 
-## [【TortoiseSVN】官网](https://tortoisesvn.net)
+## 【[TortoiseSVN](https://tortoisesvn.net)】官网
 
 ### # 常见问题
 
@@ -570,7 +570,7 @@ cmd 进入被锁的文件夹
 
 ![image-20210926123956330](..\imgs\01\Website\TortoiseSVN\image-20210926123956330.png)
 
-## [【Oracle】官网](https://www.oracle.com/index.html)
+## 【[Oracle](https://www.oracle.com/index.html)】官网
 
 ```markdown
 * 产品下载
@@ -580,9 +580,9 @@ https://www.oracle.com/downloads
 https://edelivery.oracle.com/osdc/faces/SoftwareDelivery
 ```
 
-### <a href="..\document\01\Website\OracleDatabase.md"># OracleDatabase</a>
+### # <a href="..\document\01\Website\OracleDatabase.md">OracleDatabase</a>
 
-### [# JDK安装](https://www.oracle.com/java)
+### # [JDK](https://www.oracle.com/java) 官网
 
 ```markdown
 * 下载地址
@@ -609,7 +609,7 @@ Java Archive Downloads - Java SE 8
 点击 The Structure of the Java Virtual Machine 查看虚拟机结构
 ```
 
-### <a href="..\document\01\Website\JDK环境变量.md"># JDK环境变量</a>
+### # <a href="..\document\01\Website\JDK环境变量.md">JDK环境变量</a>
 
 ```markdown
 * API
@@ -617,21 +617,21 @@ Java Archive Downloads - Java SE 8
 提取码：k6wm
 ```
 
-### [# GraalVM](https://www.oracle.com/java/graalvm)
+### # [GraalVM](https://www.oracle.com/java/graalvm)
 
 ```markdown
 * 下载地址
 https://www.oracle.com/downloads/graalvm-downloads.html
 ```
 
-### [# openjdk-8](https://github.com/bpupadhyaya/openjdk-8)
+### # [openjdk-8](https://github.com/bpupadhyaya/openjdk-8)
 
 ```markdown
 * hotspot
 https://github.com/bpupadhyaya/openjdk-8/tree/master/hotspot
 ```
 
-### [# Jmeter](https://jmeter.apache.org)
+### # [Jmeter](https://jmeter.apache.org)
 
 ```markdown
 * 简单测试
@@ -646,14 +646,14 @@ https://baijiahao.baidu.com/s?id=1604210855080150766&wfr=spider&for=pc
 名称信息：Williams Xavi
 ```
 
-## [【Apache】官网](https://www.apache.org)
+## 【[Apache](https://www.apache.org)】官网
 
 ```markdown
 # 产品下载
 https://downloads.apache.org
 ```
 
-### [# Tomcat](https://tomcat.apache.org)
+### # [Tomcat](https://tomcat.apache.org)
 
 ```markdown
 # 下载地址
@@ -671,7 +671,7 @@ https://tomcat.apache.org/oldnews.html
       https://tomcat.apache.org/tomcat-9.0-doc/config/http2.html
 ```
 
-### # Maven
+### # [Maven](https://maven.apache.org)
 
 ```markdown
 # 下载地址
@@ -736,7 +736,7 @@ thrift -help
 
 #### * IDL文件编译
 
-<a href="..\document\01\Website\user.txt">user.thrift</a>
+<a href="..\document\01\Website\user.txt">user.thrift</a> (文件后缀 改称 .thrift)
 
 ```markdown
 # 生成 java
@@ -792,7 +792,7 @@ https://dubbo.apache.org/zh/docs/v3.0/references/configuration/api
 https://dubbo.apache.org/zh/docs/v2.7/user/configuration/api
 ```
 
-### [# ShardingSphere](https://shardingsphere.apache.org/)
+### # [ShardingSphere](https://shardingsphere.apache.org/)
 
 ```markdown
 # 下载地址
@@ -814,21 +814,28 @@ https://shardingsphere.apache.org/document/5.2.1/cn/overview
 	邮箱：2244255266@qq.com
 ```
 
-## [【Centos】官网](https://www.centos.org)
+## 【[CentOS](https://www.centos.org)】官网
 
 ```markdown
 # 下载地址
 https://www.centos.org/download
 
-# 往期版本
-https://wiki.centos.org/Download.html
+# 镜像地址
+http://mirror.centos.org
+# 9版本以下
+https://vault.centos.org
+# 9版本以上
+https://mirror.stream.centos.org
 
 # Centos Linux[x86_64]详情
-http://isoredirect.centos.org/centos
-http://isoredirect.centos.org/centos/7/isos/x86_64
+https://vault.centos.org/7.9.2009/isos/x86_64/
+https://mirror.stream.centos.org/9-stream/BaseOS/x86_64/iso/
 
-# 镜像地址
-https://mirrors.huaweicloud.com/centos/7.9.2009/isos/x86_64
+# 其他镜像
+https://mirrors.huaweicloud.com/centos-vault/7.9.2009/isos/x86_64/
+https://mirrors.huaweicloud.com/centos-stream/9-stream/BaseOS/x86_64/iso/
+https://mirrors.aliyun.com/centos/7.9.2009/isos/x86_64/
+https://mirrors.aliyun.com/centos-stream/9-stream/BaseOS/x86_64/iso/
 ```
 
 ### 安装参考
@@ -876,15 +883,17 @@ docker run \
 #### 卸载Docker
 
 ```bash
+# 查询docker进程的PID 并 kill掉docker进程
+ps -ef|grep docker
+kill -9 98147
+
+# 查询docker相关目录
+find / -type d -name '*docker*' 2>/dev/null
 # 删除Docker所在目录
 rm -rf /etc/docker
 rm -rf /run/docker
 rm -rf /var/lib/docker
 rm -rf /var/lib/dockershim
-
-# 查询docker进程的PID 并 kill掉docker进程
-ps -ef|grep docker
-kill -9 98147
 
 # 查看Docker相关的包
 yum list installed | grep docker
@@ -1182,8 +1191,12 @@ source /etc/profile
 
 ☆ 也可用 echo 追加配置
 echo "方式1 or 方式2" >> /etc/profile
+```
 
-# 卸载Java
+#### 卸载Java
+
+```markdown
+# 查找安装包
 1) 查找已安装的 java-11-openjdk 包
 rpm -qa | grep java-11-openjdk
 2) 卸载所有(列出的)相关包
@@ -1584,7 +1597,7 @@ https://blog.csdn.net/weixin_44295084/article/details/125725574
 https://hub.docker.com
 ```
 
-## [【nginx】官网](https://nginx.org)
+## 【[nginx](https://nginx.org)】官网
 
 ```markdown
 # 下载地址
@@ -1610,7 +1623,7 @@ make install
 /home/nginx/sbin/./nginx -s quit
 ```
 
-## [【Google】官网](https://www.google.com)
+## 【[Google](https://www.google.com)】官网
 
 ### # 相关产品
 
@@ -1618,7 +1631,7 @@ make install
 https://about.google/products
 ```
 
-### [# Gradle](https://gradle.org)
+### # [Gradle](https://gradle.org)
 
 ```markdown
 # 往期版本
@@ -1701,7 +1714,7 @@ org.gradle.parallel=true
 kotlin.stdlib.default.dependency=false
 ```
 
-## [【Spring】官网](https://spring.io)
+## 【[Spring](https://spring.io)】官网
 
 ```markdown
 # GitHub地址
@@ -2013,7 +2026,7 @@ public class NativeTest {
 }
 ```
 
-## [【Python】官网](https://www.python.org)
+## 【[Python](https://www.python.org)】官网
 
 ### # 环境搭建
 
@@ -2232,13 +2245,14 @@ https://gitee.com/y_project/RuoYi-Vue
 快速开始 → 核心功能 → 代码生成器
 ```
 
-## [【MySQL】官网](https://dev.mysql.com/)
+## 【[MySQL](https://www.mysql.com)】官网
 
 [安装步骤](https://blog.csdn.net/fengya1/article/details/125085011)
 
-下载地址
-
-```tex
+```markdown
+# 开发
+https://dev.mysql.com
+# 下载地址
 https://dev.mysql.com/downloads/mysql
 ```
 
@@ -2269,7 +2283,7 @@ https://blog.csdn.net/m0_56044033/article/details/128387382
 https://www.cnblogs.com/hg-blogs/p/16618375.html
 ```
 
-## [【Redis】官网](https://redis.io)
+## 【[Redis](https://redis.io)】官网
 
 ### # 下载地址
 
@@ -2308,7 +2322,7 @@ https://github.com/redisson/redisson/wiki
 https://lucene.apache.org
 ```
 
-## [【MongoDB】官网](https://www.mongodb.com)
+## 【[MongoDB](https://www.mongodb.com)】官网
 
 ```markdown
 # 下载地址
@@ -2321,7 +2335,7 @@ https://www.mongodb.com/try/download/shell
 https://www.mongodb.com/try/download/compass
 ```
 
-## [【Elastic】官网](https://www.elastic.co)
+## 【[Elastic](https://www.elastic.co)】官网
 
 ```markdown
 # 语言客户端
@@ -2375,32 +2389,68 @@ https://seata.io/zh-cn
 https://seata.io/zh-cn/docs/overview/what-is-seata.html
 ```
 
-## [【RabbitMQ】官网](https://www.rabbitmq.com)
+## 【[RabbitMQ](https://www.rabbitmq.com)】消息队列
 
 [安装步骤](https://blog.csdn.net/tirster/article/details/121938987)
 
-下载地址
-
-```tex
+```bash
+# 下载地址
 https://www.rabbitmq.com/download.html
-```
 
-Dependencies 依赖关系：
+# 往期版本
+https://github.com/rabbitmq/rabbitmq-server/tags
 
-```tex
+# Dependencies 依赖关系
 https://erlang.org/download/otp_versions_tree.html
-```
 
-```tex
-打开浏览器访问：
+# erlang 版本下载
+https://github.com/rabbitmq/erlang-rpm/tags
+
+# 打开浏览器访问
 http://127.0.0.1:15672
 
-出现管理页面：
+# 管理页面
 账号：guest
 密码：guest
+
+# 使用功能，需要启动插件
+-- 管理页面插件
+rabbitmq-plugins enable rabbitmq_management
+-- 联邦插件
+rabbitmq-plugins enable rabbitmq_federation
+-- 邦插件的管理平台支持
+rabbitmq-plugins enable rabbitmq_federation_management
+-- 消息分片存储插件
+rabbitmq-plugins enable rabbitmq_sharding
+-- Stream插件
+rabbitmq-plugins enable rabbitmq_stream
+
+# Linux中，默认情况下，只允许在localhost本地登录，远程访问是无法登录的
+-- 创建管理员账密(admin/admin)
+rabbitmqctl add_user admin admin
+rabbitmqctl set_permissions -p / admin "." "." ".*"
+rabbitmqctl set_user_tags admin administrator
+
+# Linux中，先安装rabbitmq，后重命名主机，会创建新的 证书和数据库 → 需要重新 创建管理员账密
+-- 备份
+cd /var/lib/rabbitmq/mnesia
+mv rabbit\@oldname* ../bak
+-- 删除
+rm -rf /var/lib/rabbitmq/mnesia/*
+-- 重启 RabbitMQ 生成新证书
+service rabbitmq-server restart
+rabbitmqctl start_app
+-- 检查当前的 RabbitMQ 节点名称
+rabbitmqctl status | grep "Node name"
+
+# Linux中，修改 监听端口、管理页面端口、日志级别...
+vi /etc/rabbitmq/rabbitmq.conf
+listeners.tcp.default = 5672
+management.listener.port = 15672
+log.console.level = info
 ```
 
-## [【RocketMQ】官网](https://rocketmq.apache.org)
+## 【[RocketMQ](https://rocketmq.apache.org)】消息队列
 
 [安装步骤](http://t.zoukankan.com/yyee-p-14569864.html)
 
@@ -2408,18 +2458,20 @@ http://127.0.0.1:15672
 
 [常见问题](https://www.csdn.net/tags/NtzaAg1sMTQ0NzktYmxvZwO0O0OO0O0O.html)
 
-下载地址
-
-```tex
+```markdown
+# 下载地址
 https://rocketmq.apache.org/dowloading/releases
 ```
 
-## 【环信】及时通讯
+## 【[Zookeeper](https://zookeeper.apache.org)】分布式协调
 
 ```tex
-# 官网
-https://www.easemob.com
 
+```
+
+## 【[环信](https://www.easemob.com)】及时通讯
+
+```markdown
 # 注册平台
 https://datayi.cn/w/woVL50vR
 
@@ -2471,7 +2523,7 @@ https://hellosean1025.github.io/yapi
 https://hellosean1025.github.io/yapi/index.html
 ```
 
-## [【微信公众平台】官网](https://mp.weixin.qq.com)
+## 【[微信公众平台](https://mp.weixin.qq.com)】官网
 
 ```markdown
 # 公众号-AppID
@@ -2486,7 +2538,7 @@ https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html
 
 # Web开发
 
-## [【jQuery】官网](https://jquery.com)
+## 【[jQuery](https://jquery.com)】官网
 
 ```markdown
 # 下载地址
@@ -2498,7 +2550,7 @@ https://releases.jquery.com
 https://releases.jquery.com/jquery
 ```
 
-## [【Node.js】官网](https://nodejs.org/en)
+## 【[Node.js](https://nodejs.org/en)】官网
 
 ```markdown
 # 功能介绍：编译JavaScript
@@ -2536,7 +2588,7 @@ C:\Users\Viski\AppData\Roaming\npm-cache
 
 ![image-20210411110756672](..\imgs\01\Website\Node.js\image-20210411110756672.png)
 
-### [# npm软件包](https://www.npmjs.com)
+### # [npm软件包](https://www.npmjs.com)
 
 ```markdown
 # 参考链接
@@ -2695,7 +2747,7 @@ nvm use [version]
 nvm use 16.14.0
 ```
 
-## [【Vue】官网](https://cn.vuejs.org)
+## 【[Vue](https://cn.vuejs.org)】官网
 
 ```markdown
 # Vue2版本
@@ -3004,7 +3056,7 @@ https://www.cnblogs.com/treelome/p/11865217.html
 https://www.jb51.net/article/267556.htm
 ```
 
-## [【Angular】框架](https://angular.io)
+## 【[Angular](https://angular.io)】框架
 
 ```markdown
 # 中文网址
@@ -3020,17 +3072,20 @@ https://code.angularjs.org
 https://v3.bootcss.com
 ```
 
-## [【Font Awesome】图标](https://fontawesome.com)
+## 【[Font Awesome](https://fontawesome.com)】图标
 
 ```tex
 http://www.fontawesome.com.cn
 ```
 
-## [【layer】弹层组件](layer.layui.com)
+## 【[layer](https://layer.layui.com)】弹层组件
 
 ```markdown
+# 官网(已下线)
+https://www.layui.com
+
 # layui 镜像站
-https://www.layuion.com
+https://layui.dev
 
 # layui 仓库
 https://gitee.com/layui
@@ -3227,7 +3282,7 @@ https://www.zhihu.com
 https://www.cnblogs.com
 ```
 
-## [【数据结构】](https://www.cs.usfca.edu)学习
+## 【[数据结构](https://www.cs.usfca.edu)】学习
 
 ```markdown
 # 算法可视化
@@ -3236,7 +3291,7 @@ https://www.cs.usfca.edu/~galles/visualization/Algorithms.html
 
 # 内网穿透
 
-## [【ngrok】](https://www.ngrok.cc)
+## 【[ngrok](https://www.ngrok.cc)】
 
 ````markdown
 # 账密
@@ -3244,7 +3299,7 @@ https://www.cs.usfca.edu/~galles/visualization/Algorithms.html
 what.0414
 ````
 
-## [【natapp】](https://natapp.cn/)
+## 【[natapp](https://natapp.cn/)】
 
 ```markdown
 # 账密
@@ -3272,7 +3327,7 @@ natapp -authtoken=79ca9ef036abc72a
 @ygkkk → 甬哥侃侃侃ygkkk
 ```
 
-## [【Cloudflare】](https://one.one.one.one)
+## 【[Cloudflare](https://one.one.one.one)】
 
 ```markdown
 # 网络服务
@@ -3480,7 +3535,7 @@ e39639bdebc320f9bd8e
 3a201689ce5cc89b15a8b044467ac806fd5578c7
 ```
 
-## [【V2rayN】](https://github.com/2dust/v2rayN)
+## 【[V2rayN](https://github.com/2dust/v2rayN)】
 
 ### [使用教学](https://youtu.be/leuSsPtm35A?si=vz8TJ9IZFLZpcR2a)
 
@@ -3537,9 +3592,7 @@ v2rayN-windows-64-SelfContained-With-Core.7z
       [√] 最终代理
 ```
 
-## 【Clash】
-
-<a href="..\document\01\Website\VPN\Clash介绍.md">详情介绍</a>
+## 【<a href="..\document\01\Website\VPN\Clash介绍.md">Clash</a>】
 
 ### [使用教学](https://www.youtube.com/watch?v=IJM5aHaeET8)
 
@@ -3569,7 +3622,7 @@ Clash.Verge_1.5.11_x64-setup.exe
 免费机场
 ```
 
-## [【Hiddify】](https://github.com/hiddify/hiddify-next)
+## 【[Hiddify](https://github.com/hiddify/hiddify-next)】
 
 ```markdown
 # 代理软件客户端
@@ -3579,12 +3632,9 @@ https://github.com/hiddify/hiddify-next/releases/tag/v0.16.0.dev
 Hiddify-Windows-Setup-x64.exe
 ```
 
-## 【ProtonVPN】
+## 【[ProtonVPN](https://protonvpn.com)】
 
 ```markdown
-# 官网
-https://protonvpn.com
-
 # 账号密码
 邮箱：2244255266@qq.com
 密码：what.0414
@@ -3592,7 +3642,7 @@ https://protonvpn.com
 
 # DNS
 
-## [【ClouDNS】](https://www.cloudns.net/)
+## 【[ClouDNS](https://www.cloudns.net/)】
 
 [注册教程](https://kjgx668.blogspot.com/2023/12/cloudflare.html)
 
@@ -3602,7 +3652,7 @@ https://protonvpn.com
 密码：what.0414
 ```
 
-## [【dynv6】](https://dynv6.com/)
+## 【[dynv6](https://dynv6.com/)】
 
 [注册教程1](#搭建Pages)  |  [注册教程2](https://www.youtube.com/watch?v=59THrmJhmAw)  |  [注册教程3](https://www.youtube.com/watch?v=CRVKvWw9SLk)
 
@@ -3631,7 +3681,7 @@ dv.weiskey.dynv6.net
 
 **[下载地址](常用工具.md#【节点连接】工具)**
 
-## [【搭建教学】](https://www.youtube.com/watch?v=ttqOSrIlL48)
+## 【[搭建教学](https://www.youtube.com/watch?v=ttqOSrIlL48)】
 
 ```markdown
 # 注意
@@ -3703,7 +3753,7 @@ systemctl enable hysteria-server.service
 如果连接成功，依然无法科学上网，将 V2ray 的 Core类型设置 全变成 [sing box]
 ```
 
-## [【Oracle服务器】](https://www.youtube.com/watch?v=E3z-T7d2jEI)
+## 【[Oracle服务器](https://www.youtube.com/watch?v=E3z-T7d2jEI)】
 
 [账号密码](#【Oracle】官网)
 
@@ -3807,7 +3857,7 @@ bash <(wget -qO- --no-check-certificate https://gitlab.com/spiritysdx/Oracle-ser
 
 # AI Assistant
 
-## [【ChatGPT】](https://chat.openai.com)
+## 【[ChatGPT](https://chat.openai.com)】
 
 ```markdown
 # 账号密码
@@ -3818,7 +3868,7 @@ bash <(wget -qO- --no-check-certificate https://gitlab.com/spiritysdx/Oracle-ser
 新建Private(无痕)窗口 → 进入官网注册 → 使用非国内邮箱注册(如：谷歌邮箱)
 ```
 
-## [【Coze】](https://www.coze.com)
+## 【[Coze](https://www.coze.com)】
 
 ```markdown
 # 国内版
@@ -3829,9 +3879,16 @@ https://www.coze.cn
 但是国内版就只能使用一个云雀语言模型，插件也是国内应用为主
 ```
 
-## [【Cursor AI】](https://www.cursor.com)
+## 【[Cursor](https://www.cursor.com)】
 
 ```markdown
 # VSCode界面模式
+```
+
+## 【[DeepSeek](https://chat.deepseek.com)】
+
+```markdown
+# 登录方式
+微信授权
 ```
 
