--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6471,6 +6471,59 @@ kill -quit pid
 kill -term pid
 ```
 
+### 编辑网卡配置
+
+```markdown
+# vi | vim
+vi /etc/sysconfig/network-scripts/ifcfg-ens33
+-- 静态IP 配置将[BOOTPROTO]从[dhcp]改成[static]，重新设置一个固定的ip地址
+   配置子网掩码位数 PREFIX=24 → 相当于 NETMASK=255.255.255.0
+   添加 GATEWAY(x.x.x.1 可能被 VMware 占用为 NAT 网关)
+   添加 DNS1、DNS2... (若只设置 DNS=GATEWAY IP 本地连接速度更快)
+BOOTPROTO="static"
+IPADDR=192.168.90.61
+PREFIX=24
+GATEWAY=192.168.90.2
+DNS1=114.114.114.114
+DNS2=8.8.8.8
+-- 重启网络服务
+systemctl restart network
+-- 或者
+service network restart
+
+# CentOS9 之后
+vi /etc/NetworkManager/system-connections/ens160.nmconnection
+-- 静态IP 配置 → 将[method]从[auto]改成[manual]，添加 address1、dns(有多个，用逗号隔开)
+[ipv4]
+method=manual
+address1=192.168.90.91/24,192.168.0.1
+dns=114.114.114.114,8.8.8.8
+[ipv6]
+addr-gen-mode=eui64
+method=auto
+-- 重载网络配置
+nmcli connection reload
+-- 应用更改
+nmcli connection up /etc/.../ens160.nmconnection
+```
+
+### 主机重命名
+
+```markdown
+# vi | vim
+vi /etc/hostname
+
+# CentOS7 之后
+hostnamectl set-hostname newname
+
+# 重启网络服务
+如上
+
+# 注意：修改完主机名后，需要将[新的主机名]与[主机的IP地址]进行映射
+vi /etc/hosts
+192.168.90.91   newname
+```
+
 ### [防火墙相关操作](https://blog.csdn.net/qq_41812034/article/details/123129311)
 
 ```markdown
@@ -6715,9 +6768,8 @@ rm -rf /test/*data*
 
 ```markdown
 # 修改文件
--- 如：网卡配置文件
-vi /etc/sysconfig/network-scripts/ifcfg-ens33
-vim /etc/...
+vi xxx.txt
+vim xxx.txt
 ```
 
 #### vim快捷键
