--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -535,6 +535,20 @@ Editor | File Encodings → Global Encoding
                               如：爪哇 → 转义：\u722a\u54c7
                           [×] 文件会以原始编码(上述设置的 UTF-8)保存，直接显示非 ASCII 字符
                               如：爪哇 → 原始编码：爪哇
+
+# 文件的编码方式
+Create UTF-8 files → with NO BOM(推荐)
+                     含义：创建 UTF-8 编码的文件，但不添加 BOM(Byte Order Mark，字节顺序标记)
+                     适用场景：UTF-8 文件不需要 BOM 来标识编码，且 BOM 在某些场景下可能会导致问题(例如在脚本文件中)
+                     特点：文件体积更小，兼容性更好
+                   → with BOM
+                     含义：创建 UTF-8 编码的文件，并在文件开头添加 BOM
+                     适用场景：某些旧版 Windows 应用程序(如记事本) 需要 BOM 来正确识别 UTF-8 编码
+                     特点：BOM 是一个不可见的标记(0xEF 0xBB 0xBF)，可能会在某些场景下引发问题(例如在脚本文件中)
+                   → System default
+                     含义：使用系统默认的编码方式创建文件
+                     适用场景：如果你不确定是否需要 UTF-8 编码，或者希望与系统默认编码保持一致
+                     特点：编码方式取决于系统设置，可能不是 UTF-8
 ```
 
 ##### * 序列化设置
@@ -2301,18 +2315,57 @@ https://www.vmware.com/products/workstation-pro.html
 DOWNLOAD TRIAL → DOWNLOAD NOW
 ```
 
-### # 新建虚拟机
+### # [新建虚拟机](https://blog.csdn.net/m0_72536055/article/details/132362054)
 
-```tex
-https://blog.csdn.net/m0_72536055/article/details/132362054
+```markdown
+# 9 版本以上创建方式
+文件 | 新建虚拟机
+                → 自定义(高级) → Workstation xx.x.x → 稍后安装操作系统
+                → 客户机操作系统 [Linux]
+                  版本 [CentOS 8 64 位 (只是告知的作用，实际版本还是以安装镜像为准)]
+                → 虚拟机名称 [CentOS_9_C1]
+                  位置 [D:\DevDoc\VMware\workspace]
+                → 处理器 参考如下[CPU设置]
+                → 此虚拟机的内存 [推荐 2048MB以上]
+                → 使用网络地址转换 → LSI Logic → NVMe (推荐) → 创建新虚拟磁盘
+                → 最大磁盘大小 [推荐 30GB以上]
+                  将虚拟磁盘拆分成多个文件
+                → 下一步 [也可 浏览 选择其他文件]
+                → 完成
+虚拟机 | 设置
+            → CD/DVD(IDE)
+              设备状态 [启动时连接]
+              连接 [使用ISO映像文件] → 浏览[D:\DevDoc\VMware\iso\CentOS-Stream-9-latest-x86_64-dvd1.iso]
+              确定
+开启此虚拟机
+           → Install Cent0S Stream 9
+           → 中文 [简体中文]
+           → 安装目标位置 → 存储配置 [自动] → 完成
+           → 软件选择
+                    Minimal Install [只安装最基本的系统组件 → 推荐]
+                    Server [基于最小安装，添加常见的服务器软件包，不包含图形界面]
+                    Server with GUl [增加图形用户界面 → 通常是 GNOME 或 KDE]
+                    Workstation [面向桌面用户，提供完整的图形化工作环境]
+                    Custom Operating System [手动选择要安装的软件包]
+                    Virtualization Host [系统会安装 KVM、QEMU、libvirt ... 等组件]
+                     相较于 Minimal 预装了 KVM 和虚拟化工具，专为运行虚拟机设计
+                     相较于 GUl 专注于虚拟化，可能不包含完整的桌面环境(除非额外选择 GUI)
+                     相较于 Workstation(需要手动安装) 直有虚拟化平台，功能更专注
+                    完成
+           → 网络和主机名 → 以太网连接 [打开] → 完成
+           → ROOT 密码
+                      [×] 锁定 root 帐户
+                      [√] 允许 root 用户使用密码进行 SSH 登录
+             完成(简单密码需要点两次)
+           → 开始安装 → 重新启动系统
 ```
 
 ### # [CPU设置](https://zhuanlan.zhihu.com/p/609471422)
 
 ```markdown
 # 参数介绍
-处理器数量指  →  虚拟的CPU数量
-每个处理器的内核数量  →  虚拟CPU的内核数
+处理器数量 → 虚拟的CPU数量
+每个处理器的内核数量 → 虚拟CPU的内核数
 处理器内核总数 = 处理器数量 × 每个处理器的内核数量
 [虚拟机]的[处理器内核总数]对应于[真实物理机（或者叫宿主机）]的[CPU线程数（即逻辑处理器的数量）]
 所以设置时，[处理器内核总数] ＜ [逻辑处理器的数量] 即可
@@ -2362,41 +2415,20 @@ ping -c 4 www.baidu.com
 
 ```markdown
 # 解决步骤
-1) 打开配置文件
+修改网卡配置文件
 vi /etc/sysconfig/network-scripts/ifcfg-ens33
-
-2) 将dhcp改成static，再重新设置一个固定的ip地址
-BOOTPROTO=static
-IPADDR=192.168.145.121
-
-3) 设置DNS1和GATEWAY(x.x.x.1 可能被 VMware 占用为 NAT 网关)
-DNS1=192.168.145.2
-GATEWAY=192.168.145.2
-
-4) 重启网卡
-service network restart
-
-# [注意修改的IP]需要存在于[虚拟网卡的子网]范围内，否则不能远程连接
-编辑 → 虚拟网络编辑器 → 更改设置 → VMnet8
-子网:      192.168.145.0
-子网掩码:   255.255.255.0
 ```
 
-修改为静态ip后 docker容器无法访问
+<a href="..\02_问题收集\日常小结.md#编辑网卡配置">步骤详情.md</a>
 
-解决办法：[参考连接](https://blog.csdn.net/S_Y_C_1/article/details/131041281)
+#### CD/DVD (IDE)
 
 ```markdown
-# 重启docker服务
-systemctl restart docker
-```
-
-VM虚拟机中，CD/DVD (IDE)	ISO文件的下拉菜单记录如何删除
-
-```tex
+# ISO文件的下拉菜单记录如何删除
 找到以下路径：
 %AppData%\VMware → preferences.ini
-删除里面的vmWizard.isoLocationMRU开头的行
+删除里面的 vmWizard.isoLocationMRU 开头的行
+修改 vmWizard.isoLocationMRU.count
 ```
 
 ![image-20210926103109950](..\imgs\01\Tools\VMware\image-20210926103109950.png)
