--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -2317,6 +2317,8 @@ DOWNLOAD TRIAL → DOWNLOAD NOW
 
 ### # [新建虚拟机](https://blog.csdn.net/m0_72536055/article/details/132362054)
 
+[CentOS镜像地址](.\常用网站.md#【CentOS】官网) | [静态IP设置](..\02_问题收集\日常小结.md#编辑网卡配置)
+
 ```markdown
 # 9 版本以上创建方式
 文件 | 新建虚拟机
@@ -2338,8 +2340,9 @@ DOWNLOAD TRIAL → DOWNLOAD NOW
               连接 [使用ISO映像文件] → 浏览[D:\DevDoc\VMware\iso\CentOS-Stream-9-latest-x86_64-dvd1.iso]
               确定
 开启此虚拟机
-           → Install Cent0S Stream 9
-           → 中文 [简体中文]
+           → Install Cent0S Stream 9 (跳过介质检查，直接安装，适合确认介质无问题时使用) |
+             Test this media & install CentOS (先检查介质完整性，再安装，适合不确定介质是否完好时使用)
+           → 中文 [简体中文] → 继续
            → 安装目标位置 → 存储配置 [自动] → 完成
            → 软件选择
                     Minimal Install [只安装最基本的系统组件 → 推荐]
@@ -2352,7 +2355,18 @@ DOWNLOAD TRIAL → DOWNLOAD NOW
                      相较于 GUl 专注于虚拟化，可能不包含完整的桌面环境(除非额外选择 GUI)
                      相较于 Workstation(需要手动安装) 直有虚拟化平台，功能更专注
                     完成
-           → 网络和主机名 → 以太网连接 [打开] → 完成
+           → 网络和主机名
+                        以太网连接 [打开]
+                        主机名: localhost → 应用
+                        # 如果不想[虚拟机IP地址自动变化] → 可按照以下步骤设置[静态IP] → 也可省略该步骤[编辑网卡配置]
+                        配置 → IPv4 设置 → 添加
+                                              方法 [手动]
+                                              地址
+                                                   地址              子网掩码            网关
+                                                   192.168.90.91     255.255.255.0     192.168.90.2
+                                              DNS服务器  192.168.90.2
+                                              保存
+                        → 完成
            → ROOT 密码
                       [×] 锁定 root 帐户
                       [√] 允许 root 用户使用密码进行 SSH 登录
@@ -2391,13 +2405,13 @@ systemctl stop firewalld
 -- 禁用
 systemctl disable firewalld
 
-3) 关闭selinux
+3) 关闭selinux(可以不用设置)
 -- 查看selinux状态(Enforcing → 开启；Disabled → 关闭)
 getenforce
 -- 临时关闭
 setenforce 0
 -- 修改selinux配置文件,永久关闭selinux,重启后生效
-vim /etc/selinux/config
+vi /etc/selinux/config
 ...
 SELINUX=disabled
 ...
@@ -2411,15 +2425,21 @@ ifconfig
 ping -c 4 www.baidu.com
 ```
 
-#### [虚拟机IP地址自动变化](https://blog.csdn.net/sinat_41888963/article/details/128289286)
+#### 修改系统配置导致启动报错
 
-```markdown
-# 解决步骤
-修改网卡配置文件
-vi /etc/sysconfig/network-scripts/ifcfg-ens33
+```tex
+1) 在启动时按下 e 键进入 GRUB 编辑模式
+2) 找到以 linux 或 linux16 开头的行，在行尾添加 single 或 init=/bin/bash，然后按下 Ctrl + X 或 F10 启动 → 如下：
+   limux16 /vmlinuz-xxx root=/dev/Mapper/centos_xxx LANG=en_US.UTF-8 init=/bin/bash
+   Ctrl + X
+3) 重新挂载为可写
+   mount -o remount,rw /
+4) 修正配置文件的错误参数 → 例如：
+   vi /etc/selinux/config
+     before  →  SELINUXTYPE=disabled
+     after  →  SELINUXTYPE=targeted
+5) 重新启动虚拟机
 ```
-
-<a href="..\02_问题收集\日常小结.md#编辑网卡配置">步骤详情.md</a>
 
 #### CD/DVD (IDE)
 
@@ -2886,7 +2906,7 @@ https://typora.io/#windows
 https://typora.io/windows/dev_release.html
 ```
 
-#### * 切换源码编辑模式
+#### * [切换源码编辑模式](#*-插入链接)
 
 ```tex
 Ctrl + /
@@ -2995,9 +3015,9 @@ E:\Typora\Workspace
 
 [显式链接]: https://www.cnblogs.com/hongdada/p/9776547.html "常用快捷键网址"
 
-[文本内部标题](## 切换源码编辑模式)
+[文本内部标题](#* 切换源码编辑模式)
 
-[文本内部标题](##-切换源码编辑模式)
+[文本内部标题](#*-切换源码编辑模式)
 
 ```tex
 隐藏链接式：
@@ -3012,10 +3032,10 @@ E:\Typora\Workspace
 
 锚点链接：
 [锚链接标题](#标题内容)
-例如：标题内容 → “# 切换源码编辑模式”
-[文本内部标题](## 切换源码编辑模式)
+例如：标题内容 → “* 切换源码编辑模式”
+[文本内部标题](#* 切换源码编辑模式)
 注意：标题内容中的【空格】可用“-”符号代替
-[文本内部内容](##-切换源码编辑模式)
+[文本内部内容](#*-切换源码编辑模式)
 
 链接插入完成后，按Ctrl+鼠标左键，可跳转到链接
 ```
