--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -816,6 +816,8 @@ https://shardingsphere.apache.org/document/5.2.1/cn/overview
 
 ## 【[CentOS](https://www.centos.org)】官网
 
+[VMware 安装镜像](.\常用工具.md## [新建虚拟机])
+
 ```markdown
 # 下载地址
 https://www.centos.org/download
@@ -832,19 +834,15 @@ https://vault.centos.org/7.9.2009/isos/x86_64/
 https://mirror.stream.centos.org/9-stream/BaseOS/x86_64/iso/
 
 # 其他镜像
+-- 华为云
 https://mirrors.huaweicloud.com/centos-vault/7.9.2009/isos/x86_64/
 https://mirrors.huaweicloud.com/centos-stream/9-stream/BaseOS/x86_64/iso/
+-- 阿里云
 https://mirrors.aliyun.com/centos/7.9.2009/isos/x86_64/
 https://mirrors.aliyun.com/centos-stream/9-stream/BaseOS/x86_64/iso/
 ```
 
 ### 安装参考
-
-#### CentOS7的安装
-
-```tex
-https://blog.csdn.net/m0_67180694/article/details/126944567
-```
 
 #### [安装docker](https://blog.csdn.net/weixin_43977692/article/details/127492590)
 
@@ -1149,11 +1147,75 @@ vi /etc/redis_v5/redis_xxxx.conf
 用户名 default
 ```
 
-详情参考：[哨兵主从集群](..\document\01\Website\哨兵主从集群.md)
+###### 进阶参考
+
+[哨兵主从集群](..\document\01\Website\哨兵主从集群.md)
+
+###### 常见错误
+
+```shell
+# 查看redis容器日志
+docker logs redis
+# 若出现以下问题
+-- 打印
+Reading the configuration file, at line 343
+>>> 'set-proc-title yes'
+Bad directive or wrong number of arguments
+-- 原因
+Redis版本不支持set-proc-title这一配置参数
+-- 解决
+1) 去以下网址，下载对应版本的压缩包 或者 直接下载配置文件
+http://download.redis.io/releases
+https://redis.io/docs/latest/operate/oss_and_stack/management/config
+2) 删除容器
+docker stop redis
+docker rm -v redis
+或者
+docker rm -fv redis
+3) 重新创建一个实例，关联对应版本的redis.conf文件
+docker run --name redis xxx
+
+-- 打印
+Reading the configuration file, at line 171
+>>> 'logfile "/etc/redis/logs/6380.log"'
+Can't open the log file: No such file or directory
+-- 原因
+1) [redis.conf]指定的[logfile 路径] 与 [容器挂载]到[宿主机]上面的[路径不一致]
+2) [redis.conf]指定了[logfile 路径] 但 [没被容器挂载]到[宿主机]
+-- 解决
+1) 修改宿主机挂载配置
+vi /宿主机路径/redis.conf → 修改[logfile 路径]
+2) 复制宿主机目录到容器中
+cd /宿主机路径
+touch 6380.log
+docker cp -a /宿主机路径/logs 容器id:/etc/redis
+   或 删除容器，重新部署
+docker rm -fv redis
+docker run -d --name redis --restart=always -p 6379:6379 \
+-v /宿主机路径/redis.conf:/容器内部路径/redis.conf \
+-v /宿主机路径/data:/容器内部路径/data \
+-v /宿主机路径/logs:/etc/redis/logs \
+-d redis:x.x.x redis-server /容器内部路径/redis.conf \
+--appendonly yes
+```
 
 #### [安装Java](https://www.cnblogs.com/huchuqiang/p/16661469.html)
 
+##### CentOS7
+
 ```bash
+# 检查可用的更新(可省略)
+sudo yum check-update
+# 确保系统是最新的(可省略)
+-- 更新 yum 本身
+sudo yum update yum
+-- 更新所有已安装的软件包
+sudo yum update
+-- 仅更新安全相关的软件包
+sudo yum update --security
+# 清理 yum 缓存(可省略)
+sudo yum clean all
+
 # 安装jdk
 1) 搜索java jdk
 yum search java|grep jdk
@@ -1170,9 +1232,8 @@ javac
 which java
 ls -lr /usr/bin/java
 ls -lr /etc/alternatives/java
-2) 配置JAVA_HOME
+2) 配置[JAVA_HOME] → 在文件的最后加上下面内容，保存退出
 vi /etc/profile
-3) 在文件的最后加上下面内容，保存退出
 [方式1]
 JAVA_HOME=/usr/lib/jvm/java-11-openjdk
 #JAVA_HOME=/usr/lib/jvm/graalvm-ee-java8-21.3.7
@@ -1191,6 +1252,25 @@ source /etc/profile
 
 ☆ 也可用 echo 追加配置
 echo "方式1 or 方式2" >> /etc/profile
+```
+
+##### CentOS9
+
+```bash
+# 确保系统是最新的(可省略)
+sudo dnf update -y
+# 查找可用的 Java 版本
+dnf search java | grep -i jdk
+# 安装 Java
+sudo dnf install java-17-openjdk-devel.x86_64 -y
+# 验证安装
+java -version
+# 设置环境变量
+sudo vi /etc/profile
+export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-17.0.14.0.7-2.el9.x86_64
+export PATH=$PATH:$JAVA_HOME/bin
+# 重新加载环境变量
+source /etc/profile
 ```
 
 #### 卸载Java
@@ -2465,8 +2545,11 @@ https://rocketmq.apache.org/dowloading/releases
 
 ## 【[Zookeeper](https://zookeeper.apache.org)】分布式协调
 
-```tex
-
+```markdown
+# 下载地址
+https://zookeeper.apache.org/releases.html
+# 例如 Apache ZooKeeper 3.8.4(asc, sha512)
+https://dlcdn.apache.org/zookeeper/zookeeper-3.8.4/apache-zookeeper-3.8.4-bin.tar.gz
 ```
 
 ## 【[环信](https://www.easemob.com)】及时通讯
