--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -1946,7 +1946,7 @@ https://arthas.aliyun.com/doc/download.html
 https://github.com/alibaba/arthas/releases
 ```
 
-## 【接口测试】工具
+## 【接口】测试工具
 
 ### # Apipost
 
@@ -1970,14 +1970,7 @@ https://www.postman.com/downloads
   邮箱：2244255266@qq.com
 ```
 
-## 【SQL连接】工具
-
-### # [DataGrip](https://www.jetbrains.com/datagrip)
-
-```markdown
-# 下载地址
-https://www.jetbrains.com/datagrip/download
-```
+## 【Database】连接工具
 
 ### # [DBeaver](https://dbeaver.io)
 
@@ -2166,6 +2159,8 @@ mysql> source 路径\timezone_posix.sql;
 
 ### # [PL/SQL DEVELOPER](PL/SQL DEVELOPER)
 
+oracle
+
 ```markdown
 # 下载地址
 https://www.allroundautomations.com/registered-plsqldev
@@ -2201,7 +2196,9 @@ Configure → Preferences → Appearance → Language → Chinese.lang → Apply
 	连接为(C):  Normal
 ```
 
-### # [Redis Desktop Manager](https://redisdesktop.com)
+### #  Redis GUI
+
+#### [Redis Desktop Manager](https://redisdesktop.com)
 
 ```markdown
 # 下载地址
@@ -2211,13 +2208,39 @@ https://redis.com/redis-enterprise-software/download-center/software
 https://github.com/uglide/RedisDesktopManager
 ```
 
-### # RedisInsight
+#### RedisInsight
 
 ```tex
 https://redis.com/redis-enterprise/redis-insight/#insight-form
 ```
 
-## 【节点连接】工具
+### # [MongoDB Compass](https://www.mongodb.com/try/download/compass)
+
+```markdown
+# 下载地址
+https://downloads.mongodb.com/compass/mongodb-compass-1.45.3-win32-x64.exe
+```
+
+### # [DataGrip](https://www.jetbrains.com/datagrip)
+
+```markdown
+# 下载地址
+https://www.jetbrains.com/datagrip/download
+```
+
+## 【服务组件】连接工具
+
+### # Zookeeper GUI
+
+```markdown
+# PrettyZoo
+https://github.com/vran-dev/PrettyZoo
+
+# ZooInspector
+https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip
+```
+
+## 【节点】连接工具
 
 ```markdown
 # 注意
