--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -1275,7 +1275,7 @@ source /etc/profile
 
 #### 卸载Java
 
-```markdown
+```bash
 # 查找安装包
 1) 查找已安装的 java-11-openjdk 包
 rpm -qa | grep java-11-openjdk
