--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6352,7 +6352,7 @@ C:\Users\Viski\AppData\Local\JetBrains\IntelliJIdeaxxx.x
 
 ```markdown
 # Redhat、Centos、Fedora 等
-使用【rpm】包，命令是【rpm -参数】，包管理工具【yum】
+使用【rpm】包，命令是【rpm -参数】，包管理工具【yum、dnf】
 ```
 
 ### # Debian 系列
