--- a/账密文档/Emulator/Game/详情文档/合欢宗女修传_攻略.md
+++ b/账密文档/Emulator/Game/详情文档/合欢宗女修传_攻略.md
@@ -19,8 +19,17 @@ Item#19			剪刀 (最大：99  推荐：15)
 Item#21			桂花糕 (最大：99  推荐：71)
 Item#23			清水 (最大：99  推荐：23)
 Item#24			包子 (最大：99  推荐：74)
+Item#38			食铁兽掌 (最大：99  推荐：88)
+Item#39			食铁兽胆 (最大：99  推荐：79)
+Item#40			食铁兽皮 (最大：99  推荐：70)
+Item#41			欢喜饮 (最大：99  推荐：81)
+Item#60			记分牌 (最大：99  推荐：99)
+Item#70			云嬷嬷的包裹 (最大：99  推荐：1)
+Item#72			金疮药 (最大：99  推荐：92)
 
-Variable#40		灵气 (最大：10000)
+Variable#106	魅力 (推荐：120)
+Variable#108	开放 (推荐：300)
 Variable#109	精液 (最大：10000)
 Variable#117	先天之气 (最大：10000)
+Variable#366	灵气 (最大：10000)
 ```
