--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -3627,12 +3627,11 @@ e39639bdebc320f9bd8e
 https://z008.blogspot.com/2023/10/ZV2.html
 
 # 代理软件客户端
-https://github.com/2dust/v2rayN/releases/tag/7.3.0
+https://github.com/2dust/v2rayN/releases/tag/7.10.4
 
 # 下载
-v2rayN-windows-64-With-Core.zip
-或者
-v2rayN-windows-64-SelfContained-With-Core.7z
+v2rayN-windows-64-With-Core.zip | v2rayN-windows-64-SelfContained-With-Core.7z | 
+v2rayN-windows-64-SelfContained.zip
 ```
 
 ### 配置说明
@@ -3658,12 +3657,13 @@ v2rayN-windows-64-SelfContained-With-Core.7z
 
 # 其他设置说明(Win)
 设置 → 参数设置 → v2rayN 设置 → 开机启动
-                           → 启用统计
+                           → 启用流量统计
+                           → 显示实时速度
                            → 启动后隐藏窗口
                            → 测速文件地址(网速不通时，可更换)
                            → 真连接测试地址(真实连接-1时，可更换)
               → Tun模式设置 (局域网连接时设置，不推荐) → Stack [gvisor]
-              → Core类型设置 → [6kmfi]搭建的项目，需要选择[Xray]
+              → Core类型设置 → Shadowsocks[sing_box] → VLESS[Xray] → Trojan[Xray]
 设置 → 路由设置 → 域名解析策略(默认 Asls) [IPOnDemand] → 域名匹配算法(默认 空) [mph]
     → 绕过大陆 (访问国内网站，仍然是内地IP)
       [√] Google cn
