--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -390,6 +390,8 @@ AspectJ							Java Compiler
 * SonarLint						修复代码质量和代码安全问题
 
 Alibaba Java Coding Guidelines	阿里巴巴规约(代码扫描插件)
+								File | Settings | Editor | Inspections → Ali-Check
+								搜索 "Thread pool" → Severity[Warming]
 
 WakaTime						时间跟踪(GitHub账号授权)
 
@@ -562,7 +564,9 @@ Create UTF-8 files → with NO BOM(推荐)
 ##### * 语法纠错
 
 ```tex
-Editor | Natural Languages | Grammar and Style
+Editor
+       | Natural Languages | Grammar and Style
+       | Inspections → Java/Javadoc/...
 ```
 
 ##### * 代码[补全/提示]
@@ -2230,7 +2234,9 @@ https://www.jetbrains.com/datagrip/download
 
 ## 【服务组件】连接工具
 
-### # Zookeeper GUI
+### # 协调框架
+
+#### Zookeeper GUI
 
 ```markdown
 # PrettyZoo
