--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -154,8 +154,13 @@ https://www.jetbrains.com/idea/download/other.html
   快捷输出语句：sout + Enter
   输出xxx内容："xxx".sout + Enter
 
-* 内容提示，代码补全[默认快捷键]：Ctrl + Alt + Space（空格）
-  Ctrl + Alt + /
+* 编码建议、内容提示
+-- [默认按键]
+	Ctrl + Alt + Space（空格）
+-- [修改路径]
+	File | Settings | Keymap → Main Menu → Code Completion
+		[Basic]				Ctrl + Alt + /
+		[Type-Matching]		Ctrl + Alt + ,
 
 * 规范代码快捷键
   Ctrl + Alt + L
@@ -170,11 +175,9 @@ https://www.jetbrains.com/idea/download/other.html
   Ctrl + Alt + V
 
 * 补全返回值
-  1. Ctrl + Alt + V
-     如：new Scanner(System.in) 在后面按 Ctrl + Alt + V
-  2. 代码.var
+  1. 代码.var
      如：new Scanner(System.in) 在后面输入 .var + Enter
-  3. Alt + Enter
+  2. Alt + Enter
      如：new Scanner(System.in) 在后面按 Alt + Enter → Introduce local variable + Enter
 
 * 常用方法快捷键
@@ -359,9 +362,9 @@ IDEA highlighting level → All Problems	检查所有error/warning
 								打开对话框 -> [Ctrl + Shift + ,]
 
 * Apipost-Helper-2.0			接口测试开发工具
-								在 File | Settings | Keymap → Plugins 设置快捷键
-								  Search in ApiTree → [Ctrl + Alt + ,]
-								  Service → [Ctrl + Alt + ;]
+								在 File | Settings | Keymap → Plugins → Apipost-Helper-2.0
+								  [Search API]			Ctrl + Alt + ;
+								  [Search API Tree]		Ctrl + Alt + ''
 * RestfulTool					RESTful Web 服务辅助开发工具
 RestfulToolkit					(已经停止更新)
 								https://idea.javaguide.cn/plugins/rest
@@ -391,7 +394,9 @@ AspectJ							Java Compiler
 
 Alibaba Java Coding Guidelines	阿里巴巴规约(代码扫描插件)
 								File | Settings | Editor | Inspections → Ali-Check
-								搜索 "Thread pool" → Severity[Warming]
+								搜索 "ThreadPoolExecutor" → Severity[Warming]
+								     "TimeTask" → Severity[Warming]
+								     ...
 
 WakaTime						时间跟踪(GitHub账号授权)
 
