--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -463,7 +463,7 @@ eclipse.ini文件，在文件的最后添加指令：
 点击➕ → 从GitHub/Gitlab导入仓库
 ```
 
-![image-20241203214643086](..\imgs\01\Website\Git\Gitee\image-20241203214643086.png)
+![image-20241203214643086](..\imgs\01\Website\Git\Gitee/image-20241203214643086.png)
 
 2. GitHub 导入 Gitee
 
@@ -471,7 +471,7 @@ eclipse.ini文件，在文件的最后添加指令：
 点击➕ → Import repository
 ```
 
-![image-20241203224003396](..\imgs\01\Website\Git\Gitee\image-20241203224003396.png)
+![image-20241203224003396](..\imgs\01\Website\Git\Gitee/image-20241203224003396.png)
 
 3. 修改 [.git 文件夹] 下的 [config 配置文件]
 
@@ -489,7 +489,7 @@ Gitee 与本地的 Git 分支为 master
 为实现同步，可以在 Github 上创建一个 master 分支，保持三者一致
 ```
 
-![image-20241204001128532](..\imgs\01\Website\Git\Gitee\image-20241204001128532.png)
+![image-20241204001128532](..\imgs\01\Website\Git\Gitee/image-20241204001128532.png)
 
 ## 【[Gitea](https://gitea.com)】官网
 
@@ -558,7 +558,7 @@ cmd 进入被锁的文件夹
 输入 del lock /q/s
 ```
 
-![image-20210926125151440](..\imgs\01\Website\TortoiseSVN\image-20210926125151440.png)
+![image-20210926125151440](..\imgs\01\Website\TortoiseSVN/image-20210926125151440.png)
 
 或者 右击被锁文件夹
 
@@ -566,9 +566,9 @@ cmd 进入被锁的文件夹
 选择 TortoiseSVN 点击 Clean up 勾选 Break write locks【Clean up working copy status 默认被勾选】
 ```
 
-![image-20210926123122785](..\imgs\01\Website\TortoiseSVN\image-20210926123122785.png)
+![image-20210926123122785](..\imgs\01\Website\TortoiseSVN/image-20210926123122785.png)
 
-![image-20210926123956330](..\imgs\01\Website\TortoiseSVN\image-20210926123956330.png)
+![image-20210926123956330](..\imgs\01\Website\TortoiseSVN/image-20210926123956330.png)
 
 ## 【[Oracle](https://www.oracle.com/index.html)】官网
 
@@ -1573,11 +1573,11 @@ yum -y install vim*
 
 两个有依赖同时安装问题：
 
-![image-20210306203012338](..\imgs\01\Website\Centos\image-20210306203012338.png)
+![image-20210306203012338](..\imgs\01\Website\Centos/image-20210306203012338.png)
 
 一起安装问题：
 
-![image-20210306204644384](..\imgs\01\Website\Centos\image-20210306204644384.png)
+![image-20210306204644384](..\imgs\01\Website\Centos/image-20210306204644384.png)
 
 ### 常见问题
 
@@ -2240,9 +2240,9 @@ https://dysms.console.aliyun.com
 
 注意：个人版容器镜像服务在 → 新版网站中
 
-![image-20210307110036012](..\imgs\01\Website\Aliyun\image-20210307110036012.png)
+![image-20210307110036012](..\imgs\01\Website\Aliyun/image-20210307110036012.png)
 
-![image-20210307110716445](..\imgs\01\Website\Aliyun\image-20210307110716445.png)
+![image-20210307110716445](..\imgs\01\Website\Aliyun/image-20210307110716445.png)
 
 ## 【七牛云】官网
 
@@ -2665,11 +2665,11 @@ C:\Users\Viski\AppData\Roaming\npm
 C:\Users\Viski\AppData\Roaming\npm-cache
 ```
 
-![image-20210411105511817](..\imgs\01\Website\Node.js\image-20210411105511817.png)
+![image-20210411105511817](..\imgs\01\Website\Node.js/image-20210411105511817.png)
 
-![image-20210411105729465](..\imgs\01\Website\Node.js\image-20210411105729465.png)
+![image-20210411105729465](..\imgs\01\Website\Node.js/image-20210411105729465.png)
 
-![image-20210411110756672](..\imgs\01\Website\Node.js\image-20210411110756672.png)
+![image-20210411110756672](..\imgs\01\Website\Node.js/image-20210411110756672.png)
 
 ### # [npm软件包](https://www.npmjs.com)
 
@@ -2685,9 +2685,9 @@ https://blog.csdn.net/zhan107876/article/details/123326616
 https://docs.npmjs.com
 ```
 
-![image-20230216154124166](..\imgs\01\Website\Vue\image-20230216154124166.png)
+![image-20230216154124166](..\imgs\01\Website\Vue/image-20230216154124166.png)
 
-![image-20230216154631881](..\imgs\01\Website\Vue\image-20230216154631881.png)
+![image-20230216154631881](..\imgs\01\Website\Vue/image-20230216154631881.png)
 
 ### # [npm全局配置](https://blog.csdn.net/LoveQHM/article/details/124472182)
 
@@ -3081,7 +3081,7 @@ Use NPM
   vue add typescript
 ```
 
-![image-20240605064427032](..\imgs\01\Website\Vue\image-20240605064427032.png)
+![image-20240605064427032](..\imgs\01\Website\Vue/image-20240605064427032.png)
 
 ##### 常见问题
 
@@ -3556,15 +3556,15 @@ Simple.0121
 server=="cloudflare" && port=="443" && header="Forbidden" && country=="JP"
 ```
 
-![image-20241130011212849](..\imgs\01\Website\VPN\image-20241130011212849.png)
+![image-20241130011212849](..\imgs\01\Website\VPN/image-20241130011212849.png)
 
 2) 也可在 [个人中心] →  [下载记录] →  [立即下载]
 
-![image-20241130011616477](..\imgs\01\Website\VPN\image-20241130011616477.png)
+![image-20241130011616477](..\imgs\01\Website\VPN/image-20241130011616477.png)
 
 3) 打开 [V2rayN]，右击 [节点]，点击 [批量导出分享URL]
 
-![image-20241130012339785](..\imgs\01\Website\VPN\image-20241130012339785.png)
+![image-20241130012339785](..\imgs\01\Website\VPN/image-20241130012339785.png)
 
 4) 打开 [Excel] → 创建 [临时文件] → 复制 [分享URL] 到 [单元格]，如下：
 
@@ -3572,7 +3572,7 @@ server=="cloudflare" && port=="443" && header="Forbidden" && country=="JP"
 [单元格A] vless://a8f00171-edae-4ab1-b9bd-677010b56b70@158.101.159.94:443?encryption=none&security=tls&sni=zizifnwk.weiskey.workers.dev&fp=randomized&type=ws&host=zizifnwk.weiskey.workers.dev&path=%2F%3Fed%3D2048#ZizifnWK_Japan_1
 ```
 
-![image-20241130012835588](..\imgs\01\Website\VPN\image-20241130012835588.png)
+![image-20241130012835588](..\imgs\01\Website\VPN/image-20241130012835588.png)
 
 5) 提取 节点(从 @ 之后开始 到 :端口 之前结束) → 分段 信息，如下：
 
@@ -3584,27 +3584,27 @@ server=="cloudflare" && port=="443" && header="Forbidden" && country=="JP"
 [单元格C] :443?encryption=none&security=tls&sni=zizifnwk.weiskey.workers.dev&fp=randomized&type=ws&host=zizifnwk.weiskey.workers.dev&path=%2F%3Fed%3D2048#ZizifnWK_Japan_1
 ```
 
-![image-20241130013727441](..\imgs\01\Website\VPN\image-20241130013727441.png)
+![image-20241130013727441](..\imgs\01\Website\VPN/image-20241130013727441.png)
 
 6) 打开 [下载文件] → 复制 [节点]
 
-![image-20241130014524867](..\imgs\01\Website\VPN\image-20241130014524867.png)
+![image-20241130014524867](..\imgs\01\Website\VPN/image-20241130014524867.png)
 
 7) 打开 [临时文件] → 替换 [节点] → 复制 [分段信息]
 
-![image-20241130015724647](..\imgs\01\Website\VPN\image-20241130015724647.png)
+![image-20241130015724647](..\imgs\01\Website\VPN/image-20241130015724647.png)
 
 8) 替换 [制表符(空格间距)] 为 [空]
 
-![image-20241130020251957](..\imgs\01\Website\VPN\image-20241130020251957.png)
+![image-20241130020251957](..\imgs\01\Website\VPN/image-20241130020251957.png)
 
 9) 到 [V2rayN 测试]
 
-![image-20241130020716559](..\imgs\01\Website\VPN\image-20241130020716559.png)
+![image-20241130020716559](..\imgs\01\Website\VPN/image-20241130020716559.png)
 
 10) 可在 [YouTube]，查看[IP 所属地]
 
-![image-20241130020946797](..\imgs\01\Website\VPN\image-20241130020946797.png)
+![image-20241130020946797](..\imgs\01\Website\VPN/image-20241130020946797.png)
 
 ### App授权(暂时没发现作用)
 
