--- a/应用文档/03_文章收集/双亲委派机制.md
+++ b/应用文档/03_文章收集/双亲委派机制.md
@@ -21,7 +21,7 @@ SPI的全名为Service Provider Interface，主要是应用于厂商自定义组
 
 以 mysql-connector-java-5.1.48 java包说明SPI机制：
 
-![截图1](imgs\双亲委派机制\image-20220327150549818.png)
+![截图1](imgs\双亲委派机制/image-20220327150549818.png)
 
 ```tex
 以上截图展示了SPI使用的三要素：
@@ -137,7 +137,7 @@ private static void loadInitialDrivers() {
 以上两个疑问后续解决，不影响我们对如何打破双亲委托机制的讨论，现在我们已经知道，在DriverManager中去加载SPI中配置的java.sql.Driver接口的实现类使用的是线程上下文类加载器。ContextClassLoader默认存放了AppClassLoader的引用(查看下方截图2处代码)，由于它是在运行时被放在了线程中，所以不管当前程序处于何处（BootstrapClassLoader或是ExtClassLoader等），在任何需要的时候都可以用Thread.currentThread().getContextClassLoader()取出应用程序类加载器来完成加载类的操作,简单来说：在BootstrapClassLoader或ExtClassLoader加载的类A中如果使用到AppClassLoader类加载器加载的类B，由于双亲委托机制不能向下委托，那可以在类A中通过线上线程上下文类加载器获得AppClassLoader，从而去加载类B，这不是委托，说白了这是作弊，也是JVM为了解决双亲委托机制的缺陷不得已的操作！
 ```
 
-![截图2](imgs\双亲委派机制\image-20220327152455715.png)
+![截图2](imgs\双亲委派机制/image-20220327152455715.png)
 
 ```tex
 拓展：
