--- a/应用文档/04_备份文件夹/文档备份.md
+++ b/应用文档/04_备份文件夹/文档备份.md
@@ -6,9 +6,9 @@ H:\IT\黑马\课堂资源2\07-项目二阶段\projects\项目课\day05-内容管
 
 计算机名(原始名：DESKTOP-6GNRJ26)
 
-![image-20210121105435157](imgs\image-20210121105435157.png)
+![image-20210121105435157](imgs/image-20210121105435157.png)
 
 linux虚拟机主机名(原始名：localhost.localdomain)
 
-![image-20210121142555624](imgs\image-20210121142555624.png)
+![image-20210121142555624](imgs/image-20210121142555624.png)
 
