--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -4724,7 +4724,7 @@ js调用函数时候 [只写函数名字] 与 [加括号] 的区别：fn 与 fn(
 <!-- 效果如下: -->
 ```
 
-![image-20220111162034071](..\imgs\02\Summary\Front\JavaScript\image-20220111162034071.png)
+![image-20220111162034071](..\imgs\02\Summary\Front\JavaScript/image-20220111162034071.png)
 
 ```markdown
 # 可以看出：
@@ -5080,9 +5080,9 @@ Syntax error on tokens, delete these tokens
 解决方案：删除错误提示部分，重新输入。（简单粗暴，直接有效）
 ```
 
-![image-20220227223913742](..\imgs\02\Summary\Front\JavaScript\image-20220227223913742.png)
+![image-20220227223913742](..\imgs\02\Summary\Front\JavaScript/image-20220227223913742.png)
 
-![image-20220227224302412](..\imgs\02\Summary\Front\JavaScript\image-20220227224302412.png)
+![image-20220227224302412](..\imgs\02\Summary\Front\JavaScript/image-20220227224302412.png)
 
 ## jQuery
 
@@ -5108,7 +5108,7 @@ https://www.runoob.com/jquery/jquery-selectors.html
 
 进入[官网](https://releases.jquery.com)，选择一种文件(未压缩，缩小，苗条，苗条缩小) → 复制并打开 src 中的地址 → 另存为 js 文件
 
-![image-20211220151632976](..\imgs\02\Summary\Front\jQuery\image-20211220151632976.png)
+![image-20211220151632976](..\imgs\02\Summary\Front\jQuery/image-20211220151632976.png)
 
 ### $(dollar符号)
 
@@ -5671,7 +5671,7 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 =CONCATENATE("insert into 表名(列名1, 列名2) values('",Excel列1,"','",Excel列2,"');")
 ```
 
-![image-20211102184012893](..\imgs\02\Summary\Office\Excel Mobile\image-20211102184012893.png)
+![image-20211102184012893](..\imgs\02\Summary\Office\Excel Mobile/image-20211102184012893.png)
 
 若有多行数据需要赋值这种格式
 
@@ -5679,9 +5679,9 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 
 可以选中当前格式列，在右下角边缘按住鼠标左键不松，往下拖动；拖动到想要的行，然后松开左键，即可复制当前格式数据。
 
-![image-20211103095226468](..\imgs\02\Summary\Office\Excel Mobile\image-20211103095226468.png)
+![image-20211103095226468](..\imgs\02\Summary\Office\Excel Mobile/image-20211103095226468.png)
 
-![image-20211103095353459](..\imgs\02\Summary\Office\Excel Mobile\image-20211103095353459.png)
+![image-20211103095353459](..\imgs\02\Summary\Office\Excel Mobile/image-20211103095353459.png)
 
 ##### 方法2：
 
@@ -5697,9 +5697,9 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 选中一个 单元格 → 点击 数据 → 下拉列表 → 点击 ✚可以添加多行内容
 ```
 
-![image-20220111155006519](..\imgs\02\Summary\Office\Excel Mobile\image-20220111155006519.png)
+![image-20220111155006519](..\imgs\02\Summary\Office\Excel Mobile/image-20220111155006519.png)
 
-![image-20220111155441113](..\imgs\02\Summary\Office\Excel Mobile\image-20220111155441113.png)
+![image-20220111155441113](..\imgs\02\Summary\Office\Excel Mobile/image-20220111155441113.png)
 
 ## PowerPoint Mobile
 
@@ -5719,11 +5719,11 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 
 ### 分组推荐
 
-![image-20250313162926915](..\imgs\02\Summary\Windows\image-20250313162926915.png)
+![image-20250313162926915](..\imgs\02\Summary\Windows/image-20250313162926915.png)
 
 ### 手机分组
 
-![image-20250313163941941](..\imgs\02\Summary\Windows\image-20250313163941941.png)
+![image-20250313163941941](..\imgs\02\Summary\Windows/image-20250313163941941.png)
 
 ### [无法创建文本文档](https://product.pconline.com.cn/itbk/software/dnyw/1524/15244157.html)
 
@@ -5862,7 +5862,7 @@ telnet ip port
    如 → cd E:\Program Files\Java\jdk1.8.0_271\bin
 ```
 
-![image-20220324004053459](..\imgs\02\Summary\Windows\image-20220324004053459.png)
+![image-20220324004053459](..\imgs\02\Summary\Windows/image-20220324004053459.png)
 
 #### 方法2
 
@@ -5870,7 +5870,7 @@ telnet ip port
 进入目录导航栏，输入 cmd
 ```
 
-![image-20220324004053460](..\imgs\02\Summary\Windows\image-20220324004053460.png)
+![image-20220324004053460](..\imgs\02\Summary\Windows/image-20220324004053460.png)
 
 ### 常用目录
 
@@ -5961,7 +5961,7 @@ Win + D
 Win + D
 ```
 
-![image-20210906135858778](..\imgs\02\Summary\Windows\image-20210906135858778.png)
+![image-20210906135858778](..\imgs\02\Summary\Windows/image-20210906135858778.png)
 
 ### 快速删除文件
 
@@ -6075,9 +6075,9 @@ win → 用户 → Administrator
 
 右击桌面空闲处，点击【个性化】；找到【主题】，点击【桌面图标设置】，勾选想要展示的【桌面图标】
 
-![image-20210928145826044](..\imgs\02\Summary\Windows\image-20210928145826044.png)
+![image-20210928145826044](..\imgs\02\Summary\Windows/image-20210928145826044.png)
 
-![image-20210928150412845](..\imgs\02\Summary\Windows\image-20210928150412845.png)
+![image-20210928150412845](..\imgs\02\Summary\Windows/image-20210928150412845.png)
 
 ### 磁盘存储设置
 
@@ -6089,9 +6089,9 @@ win → 用户 → Administrator
 [Win + I] → 点击 系统 → 存储 → 高级存储设置 → 保存新内容的地方
 ```
 
-![image-20220426175049181](..\imgs\02\Summary\Windows\image-20220426175049181.png)
+![image-20220426175049181](..\imgs\02\Summary\Windows/image-20220426175049181.png)
 
-![image-20220426181642330](..\imgs\02\Summary\Windows\image-20220426181642330.png)
+![image-20220426181642330](..\imgs\02\Summary\Windows/image-20220426181642330.png)
 
 ### [卸载/重装 OneDrive](https://blog.csdn.net/hehehe326/article/details/120438343)
 
@@ -6187,17 +6187,17 @@ ctfmon.exe
 
 打开 任务管理器 → 性能 → 打开资源监视器 → 在【关联的句柄】的【搜索栏中】输入【想要结束的内容】
 
-![image-20220303221022665](..\imgs\02\Summary\Windows\image-20220303221022665.png)
+![image-20220303221022665](..\imgs\02\Summary\Windows/image-20220303221022665.png)
 
-![image-20220303221355040](..\imgs\02\Summary\Windows\image-20220303221355040.png)
+![image-20220303221355040](..\imgs\02\Summary\Windows/image-20220303221355040.png)
 
 ### 结束进程后，电脑黑屏
 
 打开 任务管理器 → 文件 → 运行新任务 → 输入explorer → 确定
 
-![image-20220303220502445](..\imgs\02\Summary\Windows\image-20220303220502445.png)
+![image-20220303220502445](..\imgs\02\Summary\Windows/image-20220303220502445.png)
 
-![image-20220303220736414](..\imgs\02\Summary\Windows\image-20220303220736414.png)
+![image-20220303220736414](..\imgs\02\Summary\Windows/image-20220303220736414.png)
 
 ### 您需要来自 SYSTEM 的权限才能对此文件夹进行更改
 
@@ -6211,34 +6211,34 @@ https://jingyan.baidu.com/article/e9fb46e179f76d7521f76605.html
 1) 右击要删除的文件夹 → 点击【属性】 → 【安全】 → 【编辑】
 ```
 
-![image-20211109110223908](..\imgs\02\Summary\Windows\image-20211109110223908.png)
+![image-20211109110223908](..\imgs\02\Summary\Windows/image-20211109110223908.png)
 
 ```tex
 2) 找到当前用户 → 【勾选“完全控制”】
    然后尝试删除文件夹
 ```
 
-![image-20211109110548949](..\imgs\02\Summary\Windows\image-20211109110548949.png)
+![image-20211109110548949](..\imgs\02\Summary\Windows/image-20211109110548949.png)
 
 ```tex
 3) 若不能删除文件夹，回到【安全】选项 → 点击【高级】 → 【更改】
    将所有者(system) 改成 当前登陆的用户(Users)
 ```
 
-![image-20211109111000948](..\imgs\02\Summary\Windows\image-20211109111000948.png)
+![image-20211109111000948](..\imgs\02\Summary\Windows/image-20211109111000948.png)
 
-![image-20211109111836491](..\imgs\02\Summary\Windows\image-20211109111836491.png)
+![image-20211109111836491](..\imgs\02\Summary\Windows/image-20211109111836491.png)
 
 ```tex
 4) 点击【高级】→【立即查找】→【找到当前登陆用户(Users)】→【确定】→【勾选“替换子容器和对象的所有者”】→【应用】→【确定】
    还是删除不了，可以把当前文件窗口关掉，然后重新进入删除
 ```
 
-![image-20211109112010348](..\imgs\02\Summary\Windows\image-20211109112010348.png)
+![image-20211109112010348](..\imgs\02\Summary\Windows/image-20211109112010348.png)
 
-![image-20211109113030147](..\imgs\02\Summary\Windows\image-20211109113030147.png)
+![image-20211109113030147](..\imgs\02\Summary\Windows/image-20211109113030147.png)
 
-![image-20211109114110722](..\imgs\02\Summary\Windows\image-20211109114110722.png)
+![image-20211109114110722](..\imgs\02\Summary\Windows/image-20211109114110722.png)
 
 ### 无internet,安全（但是能上网）
 
@@ -6250,11 +6250,11 @@ https://www.bilibili.com/read/cv5292887
 
 下图中第一张图是出错的注册表项：
 
-![image-20211009103047414](..\imgs\02\Summary\Windows\image-20211009103047414.png)
+![image-20211009103047414](..\imgs\02\Summary\Windows/image-20211009103047414.png)
 
 下图中第二张是之前正确的注册表项：
 
-![image-image-20211009105420975](..\imgs\02\Summary\Windows\image-20211009105420975.png)
+![image-image-20211009105420975](..\imgs\02\Summary\Windows/image-20211009105420975.png)
 
 解决：将被选中的项，(双击左键)改回为上图中所显示的值，EnableActiveProbing仍恢复为1，重启系统后，网络即能恢复正常。
 
@@ -6279,7 +6279,7 @@ EnableActiveProbing			1
 https://jingyan.baidu.com/article/6f2f55a1b8ecb6b5b93e6c00.html
 ```
 
-![image-20211009105420976](..\imgs\02\Summary\Windows\image-20211009105420976.png)
+![image-20211009105420976](..\imgs\02\Summary\Windows/image-20211009105420976.png)
 
 ```tex
 https://zhidao.baidu.com/question/233632096.html
